# oslo.config

./: setup.cfg  setup.py
oslo/config/: cfg.py
tests/: test_cfg.py
tools/: pip-requires
