[metadata]
name = oslo.config
version = 1.2.0
summary = Oslo configuration API
description-file = README
author = OpenStack
author_email = openstack-dev@lists.openstack.org
license = Apache Software License
home-page = http://pypi.python.org/pypi/oslo.packaging
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6

[files]
packages =
    oslo
    oslo.config
namespace_packages =
    oslo

[global]
setup-hooks =
    oslo.packaging.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
